terms & condition section

--- a/css/style.css
+++ b/css/style.css
@@ -845,7 +845,7 @@ a {
 }
 
 #frequent {
-  padding-bottom: 80px;
+  padding-bottom: 120px;
 }
 #frequent .container .frequent__heading {
   text-align: center;
@@ -907,6 +907,60 @@ a {
   font-size: 17px;
   color: #5D5D5D;
   padding: 20px 15px 60px 15px;
+}
+
+#terms {
+  padding-bottom: 80px;
+}
+#terms .container .terms__heading {
+  text-align: center;
+}
+#terms .container .terms__heading h4 {
+  font-size: 42px;
+  color: #3D3D3D;
+  line-height: 18px;
+  font-weight: normal !important;
+  margin-bottom: 12px;
+  padding-bottom: 14px;
+  line-height: 40px;
+}
+#terms .container .terms__heading P {
+  font-size: 16px;
+  color: #5D5D5D;
+  margin: 0;
+  line-height: 15px;
+  margin-bottom: 20px;
+}
+#terms .container .terms__detail {
+  padding: 30px 0 50px 0;
+}
+#terms .container .terms__detail h2 {
+  color: #3D3D3D;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: normal !important;
+  padding-bottom: 14px;
+  margin-bottom: 12px;
+}
+#terms .container .terms__detail ol {
+  list-style-type: nth;
+  margin-left: 55px;
+}
+#terms .container .terms__detail ol li {
+  margin-bottom: 20px;
+  color: #5D5D5D;
+  font-size: 16px;
+}
+#terms .container .terms__detail ol li::marker {
+  padding: 10px;
+  color: #5D5D5D;
+  font-size: 16px;
+}
+#terms .container .terms__detail p {
+  color: #5D5D5D;
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 10px;
 }
 
 #banner .tab-content .row .sale:nth-child(2) .sale__item .sale__tag {
