--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,8 @@
 @import "./variable";
 @import "./banner-alt";
 @import "./_about";
+@import "./faq";
+@import "./terms";
 
 // =============sale tag==========
 
