--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ a {
 #banner_alt .banner_alt__menu .container ul .alt__li:hover::after {
   opacity: 11;
   top: 60px;
+  z-index: 999;
 }
 #banner_alt .banner_alt__menu .container ul .alt__li::after {
   position: absolute;
