--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ a {
 }
 .common__btn:hover {
   opacity: 0.7;
+  color: #fff;
 }
 
 .dropdown_main {
@@ -83,6 +84,38 @@ a {
 }
 .dropdown li a {
   display: block;
+}
+
+.checkout__heading {
+  font-size: 30px;
+  line-height: 52px;
+  font-weight: 500 !important;
+  color: #3D3D3D;
+  border-bottom: 1px solid #e0e0e0;
+  letter-spacing: -1px;
+  text-transform: capitalize;
+}
+
+.common__input {
+  padding: 10px;
+  background-color: #ececec;
+  border: 0;
+  outline: none;
+  border-radius: 3px;
+  transition: all linear 0.2s;
+  width: 100%;
+}
+.common__input::-moz-placeholder {
+  text-transform: capitalize;
+}
+.common__input::placeholder {
+  text-transform: capitalize;
+}
+.common__input:hover {
+  background-color: #dddada;
+}
+.common__input:focus {
+  background-color: #dddada;
 }
 
 #banner_alt .banner_alt__menu .container ul li:nth-child(4) .banner_alt__content {
@@ -1590,6 +1623,191 @@ a {
   background-color: #59B210;
   color: #fff;
   font-weight: 600;
+}
+
+#checkout {
+  padding: 0px 0 50px 0;
+}
+#checkout .container .checkout__address .checkout__heading {
+  font-size: 30px;
+  line-height: 52px;
+  font-weight: 500 !important;
+  color: #3D3D3D;
+  border-bottom: 1px solid #e0e0e0;
+  letter-spacing: -1px;
+  text-transform: capitalize;
+}
+#checkout .container .checkout__address form {
+  padding-top: 30px;
+  margin-bottom: 50px;
+}
+#checkout .container .checkout__address form .row {
+  margin-bottom: 40px;
+}
+#checkout .container .checkout__address form .row .checkout__name h4 {
+  max-width: 100%;
+  margin-bottom: 5px;
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  color: #3D3D3D;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+}
+#checkout .container .checkout__address form .row .checkout__name .common__input {
+  padding: 10px;
+  background-color: #ececec;
+  border: 0;
+  outline: none;
+  border-radius: 3px;
+  transition: all linear 0.2s;
+  width: 100%;
+}
+#checkout .container .checkout__address form .row .checkout__name .common__input::-moz-placeholder {
+  text-transform: capitalize;
+}
+#checkout .container .checkout__address form .row .checkout__name .common__input::placeholder {
+  text-transform: capitalize;
+}
+#checkout .container .checkout__address form .row .checkout__name .common__input:hover {
+  background-color: #dddada;
+}
+#checkout .container .checkout__address form .row .checkout__name .common__input:focus {
+  background-color: #dddada;
+}
+#checkout .container .checkout__address form .checkout__creat {
+  font-size: 13px;
+  color: #5D5D5D;
+}
+#checkout .container .checkout__address form .checkout__creat a {
+  font-size: 14px;
+  color: #3D3D3D;
+  font-weight: 700;
+  text-transform: capitalize;
+  display: inline-block;
+  margin-left: 10px;
+  transition: all linear 0.2s;
+}
+#checkout .container .checkout__address form .checkout__creat a:hover {
+  color: #59B210;
+}
+#checkout .container .checkout__address .shipping__input {
+  margin-bottom: 50px;
+  padding-top: 20px;
+}
+#checkout .container .checkout__address .shipping__input a {
+  font-size: 14px;
+  color: #3D3D3D;
+  font-weight: 700;
+  text-transform: capitalize;
+  display: inline-block;
+  margin-left: 10px;
+  transition: all linear 0.2s;
+  display: inline-block;
+}
+#checkout .container .checkout__address .shipping__input a:hover {
+  color: #59B210;
+}
+#checkout .container .checkout__address .checkout__order {
+  padding: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #e0e0e0;
+  align-items: center;
+}
+#checkout .container .checkout__address .checkout__order .order__name {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+#checkout .container .checkout__address .checkout__order .order__name h5 {
+  color: #3D3D3D;
+  font-size: 20px;
+  font-weight: 700;
+}
+#checkout .container .checkout__address .checkout__order .order__name div a {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 600;
+  color: #3D3D3D;
+  text-transform: capitalize;
+}
+#checkout .container .checkout__address .checkout__order .order__name div p {
+  font-size: 13px;
+  color: #3D3D3D;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+#checkout .container .checkout__address .checkout__order h6 {
+  font-size: 20px;
+  font-weight: 700;
+  color: #5D5D5D;
+}
+#checkout .container .checkout__address .order__total {
+  margin-top: 40px;
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+#checkout .container .checkout__address .order__total .total__valu {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #dddada;
+}
+#checkout .container .checkout__address .order__total .total__valu .sub__valu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+#checkout .container .checkout__address .order__total .total__valu .sub__valu p {
+  color: #3D3D3D;
+  font-size: 15px;
+  margin: 0;
+  text-transform: capitalize;
+}
+#checkout .container .checkout__address .order__total .total__valu .sub__valu span {
+  color: #3D3D3D;
+  font-weight: 700;
+  font-size: 15px;
+  text-transform: capitalize;
+}
+#checkout .container .checkout__address .order__total .total__total {
+  display: flex;
+  padding-top: 20px;
+  width: 30%;
+  justify-content: space-between;
+  align-items: center;
+}
+#checkout .container .checkout__address .order__total .total__total p {
+  text-transform: capitalize;
+  margin: 0;
+}
+#checkout .container .checkout__address .order__total .total__total span {
+  font-size: 20px;
+  font-weight: 700;
+}
+#checkout .container .checkout__address .order__final {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  padding: 40px;
+  border-bottom: 1px solid #e0e0e0;
+}
+#checkout .container .checkout__address .order__final p {
+  font-size: 17px;
+  font-weight: 700;
+  color: #777;
+  margin: 0;
+}
+#checkout .container .checkout__address .checkout__btn {
+  padding-top: 40px;
+  justify-content: end;
+  display: flex;
 }
 
 #banner .tab-content .row .sale:nth-child(2) .sale__item .sale__tag {
