--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -150,7 +150,167 @@ a{
 
 // --------checkout ------
 
+// ---------slick slider------------
 
+.slick__slider{
+    position: relative;
+    &:hover{
+        .slick-dots{
+            opacity: 99;
+            visibility: visible;
+            bottom: -20px;
+        }
+    }
+    .slider__content_1{
+        width: 100%;
+        height: 520px;
+        background: url(../images/banner1.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        .content__detail{
+            padding: 75px 0 100px 100px;
+            h4{
+                font-size: 50px;
+                font-weight: 400;
+                color: $navtext;
+                text-transform: uppercase;
+                line-height: 40px;
+            }
+            h2{
+                font-size: 80px;
+                font-weight: 800;
+                color: $navtext;
+                margin-bottom: 20px;
+            }
+            h5{
+                font-size: 28px;
+                font-weight: 400;
+                color: $navtext;
+                text-transform: uppercase;
+                line-height: 110%;
+                margin-bottom: 10px;
+            }
+            p{
+                font-size: 12px;
+                columns: $navtext;
+                text-transform: uppercase;
+                margin-bottom: 30px;
+
+            }
+            .common__btn{
+                text-transform: capitalize;
+                display: inline-block;
+                padding: 15px 35px;
+                background-color: $green;
+                color: $white;
+                font-weight: 700;
+                border-radius: 5px;
+                transition: all linear 0.2s;
+                &:hover{
+                    opacity: 0.7;
+                }
+            }
+        }
+    }
+    .slider__content_2{
+        width: 100%;
+        height: 520px;
+        background: url(../images/banner2.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        .content__detail{
+            padding: 75px 0 100px 100px;
+            h4{
+                font-size: 50px;
+                font-weight: 400;
+                color: $navtext;
+                text-transform: uppercase;
+                line-height: 40px;
+            }
+            h2{
+                font-size: 80px;
+                font-weight: 800;
+                color: $navtext;
+                margin-bottom: 20px;
+            }
+            h5{
+                font-size: 28px;
+                font-weight: 400;
+                color: $navtext;
+                text-transform: uppercase;
+                line-height: 110%;
+                margin-bottom: 10px;
+            }
+            p{
+                font-size: 12px;
+                columns: $navtext;
+                text-transform: uppercase;
+                margin-bottom: 30px;
+
+            }
+            .common__btn{
+                text-transform: capitalize;
+                display: inline-block;
+                padding: 15px 35px;
+                background-color: $green;
+                color: $white;
+                font-weight: 700;
+                border-radius: 5px;
+                transition: all linear 0.2s;
+                &:hover{
+                    opacity: 0.7;
+                }
+            }
+        }
+    }
+    .slick-dots{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        width: 70px;
+        background-color: $white;
+        height: 40px;
+        position: absolute;
+        bottom:-30px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 5px;
+        transition: all linear 0.2s;
+        opacity: 0;
+        visibility: hidden;
+        li{
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: rgba(124, 118, 175, 0.652);
+            transition: all linear 0.2s;
+            &:hover{
+                cursor: pointer;
+                background-color: $green;
+            }
+            button{
+                display: none;
+            }
+        }
+        .slick-active{
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: $green;
+        }
+    }
+}
+
+
+
+
+
+
+
+// ---------slick slider------------
 
 
 
